--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
 <body>
   <h1>My Filmmaking Portfolio</h1>
   <h2>About Me</h2>
-  <p>Hello, my name is [Your Name] and I am a filmmaker. I have a passion for creating visual stories and have experience in [list your skills and experience].</p>
+  <p>Hello, my name is Matthew Hirst and I am a filmmaker. I have a passion for creating visual stories and have experience in [list your skills and experience].</p>
   <h2>My Work</h2>
   <h3>Short Films</h3>
   <ul>
-    <li><a href="film1.html">Film 1</a></li>
-    <li><a href="film2.html">Film 2</a></li>
-    <li><a href="film3.html">Film 3</a></li>
+    <li><a href="https://www.youtube.com/watch?v=3x_j6ZFwwg8&ab_channel=Hirsty">Film 1</a></li>
+    <li><a href="https://www.youtube.com/watch?v=XEiggNVLlOE&ab_channel=Hirsty">Film 2</a></li>
+    <li><a href="https://www.youtube.com/watch?v=Anu2I3LcjVo&ab_channel=Hirsty">Film 3</a></li>
   </ul>
   <h3>Music Videos</h3>
   <ul>
-    <li><a href="musicvideo1.html">Music Video 1</a></li>
-    <li><a href="musicvideo2.html">Music Video 2</a></li>
-    <li><a href="musicvideo3.html">Music Video 3</a></li>
+    <li><a href="https://www.youtube.com/watch?v=wSvshzJYLPI&ab_channel=Hirsty">Music Video 1</a></li>
   </ul>
 </body>
 </html>
